// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Should correctly render InputText with all parameters 1`] = `
<div>
  <textarea
    autocomplete="off"
    class="apptr__form-input input-text"
    id="test"
    maxlength="1500"
    name="testName"
    rows="10"
  >
    value
  </textarea>
</div>
`;

exports[`Should correctly render InputText with base parameters 1`] = `
<div>
  <textarea
    autocomplete="off"
    class="apptr__form-input input-text"
    id="test"
    maxlength="2000"
    rows="5"
  >
    value
  </textarea>
</div>
`;

exports[`Should correctly render InputText with defaultValue 1`] = `
<div>
  <textarea
    autocomplete="off"
    class="apptr__form-input input-text"
    id="test"
    maxlength="2000"
    rows="5"
  >
    This is the text that should be present
  </textarea>
</div>
`;
